--- a/sorting.css
+++ b/sorting.css
@@ -3,12 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-.title {
-    color:#fff
-}
+
 body {
-  font-family: "Roboto", sans-serif;
-  background: rgb(66, 56, 56);
+  font-family: "Ubuntu", sans-serif;
+  background: black;
 }
 
 .main-container {
@@ -35,7 +33,17 @@ header .title {
   }
 }
 
+.title .color-1{
+  color: #f00000;
+}
 
+.title .color-2{
+  color:#0072ff;
+}
+
+.title .color-3{
+  color: #15fa00;
+}
 
 header .navbar {
   margin: auto;
@@ -55,11 +63,11 @@ header .navbar {
 
 .navbar .btn {
   padding: 0.4rem 0.7rem;
-  font-family: "Roboto";
+  font-family: monospace;
   font-size: 0.9rem;
   color: white;
-  background: rgb(185, 187, 87);
-  border: 2px solid ;
+  background: black;
+  border: 2px solid rgb(212, 2, 2);
   border-radius: 2px;
   outline: none;
   cursor: pointer;
@@ -67,7 +75,7 @@ header .navbar {
 }
 
 .navbar .btn:hover {
-  background: rgb(128, 182, 135);
+  background: rgb(212, 2, 2);
 }
 
 @media (max-width: 1100px) {
