--- a/sorting.css
+++ b/sorting.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  font-family: "Ubuntu", sans-serif;
-  background: black;
+  font-family: "Roboto", sans-serif;
+  background: white;
 }
 
 .main-container {
@@ -33,17 +33,7 @@ header .title {
   }
 }
 
-.title .color-1{
-  color: #f00000;
-}
 
-.title .color-2{
-  color:#0072ff;
-}
-
-.title .color-3{
-  color: #15fa00;
-}
 
 header .navbar {
   margin: auto;
@@ -63,11 +53,11 @@ header .navbar {
 
 .navbar .btn {
   padding: 0.4rem 0.7rem;
-  font-family: monospace;
+  font-family: "Roboto";
   font-size: 0.9rem;
   color: white;
-  background: black;
-  border: 2px solid rgb(212, 2, 2);
+  background: rgb(128, 221, 136);
+  border: 2px solid ;
   border-radius: 2px;
   outline: none;
   cursor: pointer;
@@ -75,7 +65,7 @@ header .navbar {
 }
 
 .navbar .btn:hover {
-  background: rgb(212, 2, 2);
+  background: rgb(34, 32, 32);
 }
 
 @media (max-width: 1100px) {
@@ -117,9 +107,8 @@ header .navbar {
 .navbar .nav-left .slider-container .slider-text {
   margin-bottom: 0.5rem;
   letter-spacing: 0.1rem;
-  font-size: 0.7rem;
   font-weight: bold;
-  color:white;
+  color:black;
 }
 
 .navbar .nav-left .slider-container .slider-input {
@@ -155,7 +144,7 @@ header .navbar {
 
 .bar-container .bars {
   width: 25px;
-  background: #ffd000;
+  background: #4a839e;
   border: 2px solid black;
   transition-property: all;
   transition-duration: 0.7s;
